# finpilot

./: .gitignore  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  DEVOPS_SETUP_SUMMARY.md  FinPilot_Project_Guide.docx  INFRASTRUCTURE_REFERENCE.md  STATUS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  turbo.json  vercel.json
.claude/: settings.local.json
.claude/agents/: analytics-engine.md  bank-scraper.md  data-pipeline.md  finpilot-architect.md  finpilot-devops.md  finpilot-frontend-dev.md  finpilot-recommendations.md  finpilot-security-specialist.md  qa-docs-agent.md
.claude/commands/: deploy.md  initial STATUS.md  milestone.md  plan.md  review.md  screenshot.md  status.md
.github/workflows/: ci.yml  cleanup.yml  deploy-backend.yml  deploy-frontend.yml
DetaildPRDs/: CC-CYCLE-TRACKER-PRD.md
apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Makefile  package.json  pyproject.toml  recon_cc_final.py  recon_cc_months.py  recon_cc_statement.py  recon_cc_txns.py  recon_nbe.py  requirements.txt  run_bdc_local.py  test_nbe_local.py
apps/api/.claude/agent-memory/bank-scraper/: MEMORY.md  nbe_portal_facts.md
apps/api/.claude/agent-memory/qa-docs-agent/: MEMORY.md
apps/api/app/: config.py  crypto.py  main.py  scheduler.py
apps/api/app/analytics/: __init__.py  categorizer.py  credit.py  spending.py  trends.py
apps/api/app/middleware/: __init__.py
apps/api/app/models/: __init__.py  api.py  db.py
apps/api/app/pipeline/: __init__.py  deduplicator.py  normalizer.py  runner.py  upserter.py
apps/api/app/recommendations/: __init__.py  debt_optimizer.py  forecaster.py  monthly_plan.py  savings.py
apps/api/app/routers/: analytics.py  credentials.py  debts.py  installments.py  recommendations.py  scrape.py  sync.py  utils.py
apps/api/app/scrapers/: __init__.py  base.py  bdc.py  bdc_retail.py  cib.py  nbe.py  ub.py
apps/api/app/tests/: __init__.py  conftest.py  test_analytics.py  test_credentials.py  test_crypto.py  test_debts.py  test_health.py  test_models.py  test_pipeline.py  test_recommendations.py  test_scrapers.py  test_scrapers_bdc_ub.py
apps/web/: .dockerignore  .env.example  Dockerfile.dev  next.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: page.tsx  (+1 more)
docs/adr/: ADR-001-core-database-schema.md
supabase/migrations/: 20260318_expand_account_type.sql  20260319_add_credit_card_and_certificate_columns.sql
tools/: screenshot.js  test_login.js  test_login2.js  test_login3.js  test_login4.js
(+96 files in other folders)
