[project]
name = "finpilot-api"
version = "0.1.0"
description = "FinPilot FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "supabase>=2.0.0",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["recon_nbe.py", "recon_*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E741"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_return_any = false
warn_unused_ignores = false
exclude = ["app/tests/"]

[[tool.mypy.overrides]]
module = [
    "app.analytics.categorizer",
    "app.pipeline.upserter",
    "app.routers.analytics",
    "app.routers.scrape",
    "app.scrapers.base",
    "app.scrapers.nbe",
    "app.scrapers.cib",
    "app.scrapers.bdc",
    "app.scrapers.ub",
    "app.recommendations.savings",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "app/*/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50
